Fix for bug 205778 (document('') load of stylesheet conflicts with http cache). r=Pike, sr=bz.