extensions/transformiix/source/xslt/txMozillaXSLTProcessor.h
@@ -155,12 +155,13 @@ public:
         return mSource;
     }
 
+    nsresult TransformToDoc(nsIDOMDocument *aOutputDoc,
+                            nsIDOMDocument **aResult);
+
 private:
     nsresult DoTransform();
     void notifyError();
     nsresult ensureStylesheet();
-    nsresult TransformToDoc(nsIDOMDocument *aOutputDoc,
-                            nsIDOMDocument **aResult);
 
     nsRefPtr<txStylesheet> mStylesheet;
     nsIDocument* mStylesheetDocument; // weak
